--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,23 +9,21 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - name: Install Pre-requisites
-        run: .github/scripts/ubuntu-init.sh
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '10.x'
+          node-version: 16
       - name: install
         run: npm install
       - name: lint
         run: npm run lint
       - name: test
         run: npm run test
-      - name: coverage
-        run: npm run coverage:report
+      # - name: coverage
+      #   run: npm run coverage:report
       - name: Release
         if: github.ref == 'refs/heads/master'
         id: semantic
